--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,9 @@
     "scripts": ["events.js"],
     "persistent": false
   },
+  "chrome_url_overrides" : {
+    "chrome://newtab": "tabs.html"
+  },
   "browser_action": {
       "default_title": "Show Tabs in this Process",
       "default_icon": "icon.png"
