--- a/manifest.json
+++ b/manifest.json
@@ -11,10 +11,10 @@
   ],
   "background": {
     "scripts": ["events.js"],
-    "persistent": false
+    "persistent": true
   },
   "chrome_url_overrides" : {
-    "chrome://newtab": "tabs.html"
+    "newtab": "tabs.html"
   },
   "browser_action": {
       "default_title": "Show Tabs in this Process",
